K8S_Networking/Multi-Pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-pod
spec:
  containers:
    - name: container1
      image: ubuntu
      command: ["/bin/sleep", "infinity"]
    - name: container2
      image: ubuntu
      command: ["/bin/sleep", "infinity"]
