K8S_Networking/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
  #namespace: default
spec:
  selector:
    matchLabels:
      app: nginx # has to match .spec.template.metadata.labels
  serviceName: "nginx-headless"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: nginx # has to match .spec.selector.matchLabels
    spec:
      #terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: nginx-slim:1.16.1
        ports:
        - containerPort: 80
          name: web
        #volumeMounts:
        #- name: www
         # mountPath: /usr/share/nginx/html
  #volumeClaimTemplates:
  #- metadata:
   #   name: www
    #spec:
     # accessModes: [ "ReadWriteOnce" ]
      #storageClassName: "my-storage-class"
      #resources:
       # requests:
        #  storage: 1Gi
