K8S_Networking/pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
containers:
  - name: container1
    image: nginx
---
