K8S_Networking/nginx-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: MYAPP
  #cnamespace: default
spec:
  selector:
    app: nginx
  type: LoadBalancer
  #sessionAffinity: None
  #sessionAffinityConfig:
   # clientIP:
   #   timeoutSeconds: 10800
  ports:
  #- name: MYAPP
  - protocol: TCP
    port: 80
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    #nodePort:
