K8S_Networking/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  #namespace: nginx-service
spec:
  selector:
    app: nginx
  #type: ClusterIP
  #sessionAffinity: None
  #sessionAffinityConfig:
   # clientIP:
    #  timeoutSeconds: 10800
  ports:
  - name: nginx-service
    protocol: TCP
    port: 80
    targetPort: 8080
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort:
